changes for people from prepan.org

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for CheckUpdates-AUR
+Revision history for OS-CheckUpdates-AUR
 
 0.01    Date/time
         First version, released on an unsuspecting world.
